# weaselbench

./: .gitignore  README.md  export-manifest.txt  pyproject.toml
benchmarks/: weaselbench-v0.yaml
configs/batch/: quick.toml  standard.toml
containers/agent-runtime/: Dockerfile  README.md
containers/node-api/: Dockerfile
containers/python-service/: Dockerfile
docs/: benchmark-charter.md  difficulty-rubric.md  task-authoring.md  task-sourcing.md
schemas/: evaluation-manifest.schema.json  evaluation-summary.schema.json  run-artifact.schema.json  task.schema.json
src/weaselbench/: __init__.py  _edits.py  artifacts.py  assets.py  cli.py  container_runtime.py  evaluation.py  loader.py  providers.py  realism.py  reporting.py  runner.py  runtime_images.py  scoring.py  verifier.py
src/weaselbench/checks/: __init__.py  filesystem.py  imports_js.py  imports_python.py  runner_checks.py  structural.py
src/weaselbench/web_assets/: app.js  index.html  styles.css
tasks/v0/migrate-to-structured-logging/: README.md  task.yaml
tasks/v0/migrate-verdaccio-express-to-fastify/: README.md  (+2 more)
tests/: conftest.py  test_artifacts.py  test_assets.py  test_cli.py  test_evaluation.py  test_loader.py  test_providers.py  test_realism.py  test_runner.py  test_runtime_images.py  test_scoring.py  test_solutions.py  test_verifier.py
tests/fixtures/: invalid_bad_workflow.yaml  invalid_missing_axis.yaml  invalid_missing_id.yaml  invalid_missing_repo_archive.yaml  invalid_required_pass_axis.yaml  invalid_unchecked_score_axis.yaml  invalid_unscored_check_axis.yaml  valid_task.yaml
(+10 files in other folders)
